--- a/app/src/main/res/layout/page_more.xml
+++ b/app/src/main/res/layout/page_more.xml
@@ -20,34 +20,23 @@
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="38dp"
-        android:layout_marginStart="38dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginStart="14dp"
         android:text="แก้ไขข้อมูลส่วนตัว"
         android:textStyle="bold"
         android:layout_above="@+id/textView29"
         android:layout_alignLeft="@+id/button_save"
         android:layout_alignStart="@+id/button_save" />
+
     <TextView
         android:id="@+id/textView27"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imageView14"
-        android:layout_alignLeft="@+id/textView24"
-        android:layout_alignStart="@+id/textView24"
-        android:text="แก้ไขข้อมูลของคนที่คุณรัก ฃื่อ อายุ น้ำหนัก ส่วนสูง"
+        android:layout_alignBottom="@+id/imageView15"
+        android:layout_alignLeft="@+id/textView26"
+        android:layout_alignStart="@+id/textView26"
+        android:text="ข้อมูลของกตัญญู แอปพลิเคชั่น"
         android:textSize="10sp" />
-
-    <TextView
-        android:id="@+id/textView19"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="35dp"
-        android:layout_marginStart="35dp"
-        android:textStyle="bold"
-        android:text=">"
-        android:layout_above="@+id/textView29"
-        android:layout_toRightOf="@+id/button_save"
-        android:layout_toEndOf="@+id/button_save" />
 
     <ImageView
         android:id="@+id/imageView12"
@@ -80,17 +69,6 @@
         android:layout_alignStart="@+id/textView22" />
 
 
-    <TextView
-        android:id="@+id/textView21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:text=">"
-        android:layout_alignBaseline="@+id/textView20"
-        android:layout_alignBottom="@+id/textView20"
-        android:layout_alignLeft="@+id/textView19"
-        android:layout_alignStart="@+id/textView19" />
-
     <ImageView
         android:id="@+id/imageView13"
         app:srcCompat="@drawable/mobile"
@@ -107,6 +85,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:text="แก้ไขรหัสอุปกรณ์"
+        android:layout_marginBottom="6dp"
         android:layout_above="@+id/textView28"
         android:layout_alignLeft="@+id/textView25"
         android:layout_alignStart="@+id/textView25" />
@@ -121,21 +100,9 @@
         android:layout_alignStart="@+id/textView18" />
 
 
-
-    <TextView
-        android:id="@+id/textView23"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:text=">"
-        android:layout_alignBaseline="@+id/textView22"
-        android:layout_alignBottom="@+id/textView22"
-        android:layout_alignLeft="@+id/textView26"
-        android:layout_alignStart="@+id/textView26" />
-
     <ImageView
         android:id="@+id/imageView14"
-        app:srcCompat="@drawable/about"
+        app:srcCompat="@drawable/book"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_below="@+id/imageView13"
@@ -152,8 +119,8 @@
         android:layout_alignLeft="@+id/textView20"
         android:layout_alignStart="@+id/textView20"
         android:layout_marginBottom="13dp"
-        android:textStyle="bold"
-        android:text="เกี่ยวกับเรา" />
+        android:text="แก้ไขข้อมูลสุขภาพ"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView25"
@@ -165,16 +132,34 @@
         android:layout_alignLeft="@+id/textView20"
         android:layout_alignStart="@+id/textView20" />
 
+    <ImageView
+        android:id="@+id/imageView15"
+        app:srcCompat="@drawable/about"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/imageView14"
+        android:layout_alignLeft="@+id/imageView14"
+        android:layout_alignStart="@+id/imageView14" />
+
+    <TextView
+        android:id="@+id/textView25"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:text="เกี่ยวกับเรา"
+        android:layout_above="@+id/textView27"
+        android:layout_alignLeft="@+id/textView27"
+        android:layout_alignStart="@+id/textView27" />
+
     <TextView
         android:id="@+id/textView26"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:text=">"
-        android:layout_alignBaseline="@+id/textView24"
-        android:layout_alignBottom="@+id/textView24"
-        android:layout_alignRight="@+id/textView21"
-        android:layout_alignEnd="@+id/textView21" />
+        android:layout_alignBottom="@+id/imageView14"
+        android:layout_alignLeft="@+id/textView24"
+        android:layout_alignStart="@+id/textView24"
+        android:text="แก้ไขการแจ้งเตือนการเต้นของหัวใจ การเดิน การนอน"
+        android:textSize="10sp" />
 
     <Button
         android:id="@+id/button_save"
@@ -188,6 +173,61 @@
         android:textColor="@color/colorFront2"
         android:textSize="20sp"
         android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:text=">"
+        android:background="@color/colorFront2"
+        android:layout_alignBaseline="@+id/textView18"
+        android:layout_alignBottom="@+id/textView18"
+        android:layout_alignLeft="@+id/button3"
+        android:layout_alignStart="@+id/button3" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:text=">"
+        android:background="@color/colorFront2"
+        android:layout_alignBaseline="@+id/textView20"
+        android:layout_alignBottom="@+id/textView20"
+        android:layout_alignLeft="@+id/button4"
+        android:layout_alignStart="@+id/button4" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:text=">"
+        android:background="@color/colorFront2"
+        android:layout_alignBaseline="@+id/textView22"
+        android:layout_alignBottom="@+id/textView22"
+        android:layout_alignLeft="@+id/button5"
+        android:layout_alignStart="@+id/button5" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:text=">"
+        android:background="@color/colorFront2"
+        android:layout_alignTop="@+id/imageView14"
+        android:layout_alignLeft="@+id/button6"
+        android:layout_alignStart="@+id/button6" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:text=">"
+        android:background="@color/colorFront2"
+        android:layout_below="@+id/imageView14"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="11dp"
+        android:layout_marginEnd="11dp" />
 
 
 </RelativeLayout>
