--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorFront1">#d70b12</color>
     <color name="colorFront2">#ffffff</color>
     <color name="colorFront3">#cccbcb</color>
+    <color name="colorFront4">#e63b3b</color>
 </resources>
