--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,6 +6,11 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_token"
+        android:orderInCategory="100"
+        android:title="Show Token"
+        app:showAsAction="never" />
 
     <item
     android:id="@+id/menu_logout"
